--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "sqlite3": "^4.2.0"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1",
+    "supertest": "^4.0.2"
   }
 }
