--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "pug": "^2.0.4",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
