--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "server": "nodemon index.js",
+    "server": "nodemon --ignore sessions/ server.js index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -21,15 +21,21 @@
   "homepage": "https://github.com/Build-Week-School-In-The-Cloud/Unit4-Backend#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "gitignore": "^0.6.0",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4",
-    "sqlite3": "^4.2.0"
+    "session-file-store": "^1.4.0",
+    "sqlite3": "^4.2.0",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "jest": "^26.0.1",
